# finalestRCAA

./: .env  .env.example  .gitignore  Dockerfile  README.md  client.py  inference.py  inference_results.json  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  run_dev.py  start_local.ps1
baseline/: agent.py
scenarios/: custom_example.json  data_breach.json  ddos.json  easy.json  hard.json  medium.json
server/: __init__.py  app.py  environment.py  environment.py.tmp  grader.py  llm.py  ui.html
static/: neural-bg.js
